--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>My First Website</title>
-        <link href="base,css" rel="stylesheet">
+        <link href="base.css" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
     </head>
 <body>
