--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My First Website</title>
         <link href="base.css" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
     </head>
-<body>
+
+  <body class="works_on_smartphone">
    <header>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -14,21 +16,21 @@
     </ul>
    </header>
 
-  <main>
+   <main>
     <article>
       <h1>Welcome To My Page</h1>
       <p>Hello! Welcome!</p>
       <p>This is the page I just created. Kindly check it out.</p>
       <p>Thank you.</p>
       <table>
-  <thead>
+   <thead>
     <tr>
       <th>Name</th>
       <th>Age</th>
       <th>Country</th>
     </tr>
-  </thead>
-  <tbody>
+   </thead>
+   <tbody>
     <tr>
       <td>John</td>
       <td>25</td>
@@ -49,16 +51,16 @@
       <td>21</td>
       <td>UK</td>
     </tr>
-  </tbody>
-</table>
+   </tbody>
+   </table>
     </article>
     <aside>
       <p>placeholder to add comment thread later</p>
     </aside>
-  </main>
+   </main>
 
-  <footer>
+   <footer>
     <p>Made by O'real_Tech - <a href="https://example.com" target="_blank">here</a></p>
-  </footer>
-</body>
+   </footer>
+  </body>
 </html>
