--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -11,6 +11,7 @@
   <body class="works_on_smartphone">
    <header>
     <ul>
+      <li class="logo">&#128218;</li> <!-- This is the logo (book icon) -->
       <li><a href="index.html">Home</a></li>
       <li><a href="tweets.html">Tweets</a></li>
     </ul>
