--- a/headphones/8-index.html
+++ b/headphones/8-index.html
@@ -12,12 +12,20 @@
                 <div class="logo">
                     <img src="images/logo_headphones.png" alt="headphones" class="logo">
                 </div>
+
+                <div class="hamburger" id="hamburger">
+                   <span></span>
+                   <span></span>
+                   <span></span>
+                </div>
+
                 <nav>
                 <ul>
                     <li><a href="#">what we do</a></li>
                     <li><a href="#">our results</a></li>
                     <li><a href="#">contact us</a></li>
                 </ul>
+                
             </nav>
             </div>
         </header>
